fix: refactor to a more simplier approach
