# src/business/domain/entities/private-plan-withdrawal.ts
@@ -5,6 +5,7 @@ export enum PrivatePlanWithdrawalStep {
   CREATED = 'CREATED',
   DEBITING = 'DEBITING',
   SENDING_TO_BANK = 'SENDING_TO_BANK',
+  RECEIVED_BANK_RESPONSE = 'RECEIVED_BANK_RESPONSE',
   ROLLING_BACK = 'ROLLING_BACK',
   COMPLETED = 'COMPLETED',
   FAILED = 'FAILED',
